--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section class="hero">
     <div class="inner-hero">
-      <h1>Shelter In Place</h1>
+      <h1>Shelter In Place Test</h1>
       <p class="subhead">Life In Quarantine by Sam Shin</p>
       <button class="button"> <a href="home.html">Hello There</a> </button>
     </div>
